Refactor the code to use @Nullable to indicate nullability instead of Optional